--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,17 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# pycharm
+.idea/
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+migrations/
+
+.env
+db.sqlite3
